class Status:
    

    def __init__(self, id, title) -> None:
        self.id = id
        self.title = title
